# ExpressionCalcNew

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/inc/: Addition.h  DataStorage.h  Division.h  Input.h  InputManager.h  Multiplication.h  OperationManager.h  Operations.h  Operator.h  Point.h  Power.h  Priority.h  ResultData.h  Subtraction.h
lib/src/: CheckPoint.cpp  CheckString.cpp  CheckSyntax.cpp  DeduceExpression.cpp  EvaluateExpression.cpp  EvaluatePoint.cpp  HandleInput.cpp  MakePoint.cpp  Point.cpp  Result.cpp  Variabl.cpp
samples/: CMakeLists.txt  concept.cpp  main.cpp
